fix: minor ui fix for text overflow

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -557,6 +557,12 @@ button, .button
     li
       margin-top: 10px
 
+.overflow.ellipse
+  overflow: hidden
+  text-overflow: ellipsis
+  white-space: nowrap
+  max-width: 200px
+
 .hide-overflow
   max-width: 300px
   overflow: hidden
